# AetherCore

./: '@ + $out + @'  .dockerignore  .gitignore  :-  ADMIN_MODULE_EXECUTION_COMPLETE.txt  ADMIN_MODULE_HARDENING_COMPLETE.md  ADMIN_MODULE_QUICK_REFERENCE.md  AETHERCORE_ATAK_INSTALLATION_COMPLETE.md  AETHERCORE_ATAK_INSTALLATION_FINAL_STATUS_REPORT.md  AGENTS.md  ARCHITECTURE.md  ATAK_PLUGIN_SECURITY_FIXES.md  AWS_DOCUMENTATION_INDEX.md  AWS_INTEGRATION_COMPLETE.md  AWS_INTEGRATION_STATUS.md  AWS_QUICK_REFERENCE.md  AWS_TESTBED_SETUP.md  BUILD_NOW.md  BUILD_SUCCESS.md  CHANGELOG.md  CODE_QUALITY_AUDIT.md  CODE_QUALITY_AUDIT_REPORT.md  COMMAND_REFERENCE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_QA_AUDIT_REPORT.md  CONTRIBUTING.md  COPY_SDK_ARTIFACTS.sh  Cargo.toml  DASHBOARD_AUDIT_COMPLETE.md  DASHBOARD_CONNECTION_RESTORED.md  DASHBOARD_ENDPOINTS_COMPLETE.md  DASHBOARD_GUIDE.md  DASHBOARD_INTEGRATION_COMPLETE.md  DASHBOARD_LIVE_NOW.txt  DASHBOARD_LIVE_STATUS.txt  DASHBOARD_LOADING_FIXED.md  DASHBOARD_QUICK_START.md  DASHBOARD_READY_FINAL.txt  DASHBOARD_RUNNING_STATUS.md  DASHBOARD_STARTUP_GUIDE.md  (+142 more)
aethercore-core/: Cargo.toml  LEDGER.md  MERKLE.md  README.md
aethercore-core/examples/: ledger_usage.rs
aethercore-core/src/: merkle_vine.rs  trust_chain.rs
aethercore-core/tests/: ledger_integration.rs
aethercore-crypto/: CHAIN_MODULE.md  Cargo.toml  README.md  SIGNING_SERVICE.md
aethercore-crypto/src/: lib.rs  signing.rs  test_vectors.rs
aethercore-crypto/src/zk/: poseidon.rs
aethercore-identity/: ATTESTATION.md  Cargo.toml  README.md
aethercore-identity/src/: lib.rs  pki.rs
aethercore-identity/tests/: attestation_integration.rs
aethercore-trust_mesh/: Cargo.toml
aethercore-trust_mesh/src/: chain.rs  lib.rs  merkle.rs  service.rs  signing.rs
aethercore-trust_mesh/tests/: integration_test.rs
crates/android-ffi/: Cargo.toml
crates/android-ffi/src/: daemon.rs  identity.rs  lib.rs  sweep.rs
crates/c2-router/: Cargo.toml  build.rs
crates/c2-router/benches/: c2_router_bench.rs
crates/c2-router/examples/: tak_bridge_publish.rs
crates/c2-router/src/: authority.rs  command_types.rs  dispatcher.rs  grpc.rs  ledger.rs  lib.rs  offline.rs  quorum.rs  replay_protection.rs
crates/c2-router/src/feeds/: mod.rs
crates/core/: Cargo.toml
crates/core/benches/: merkle_vine_bench.rs
crates/core/examples/: perf.rs
crates/core/src/: config.rs  error.rs  event.rs  event_canonicalizer.rs  integrity_event.rs  ledger.rs  lib.rs  logging.rs  merkle_aggregator.rs  merkle_vine.rs  slashing.rs  types.rs  zk_trait.rs
crates/crypto/: Cargo.toml  ZK_PROOF_GUIDE.md  build.rs
crates/crypto/proto/: signing.proto
crates/crypto/src/: bench.rs  chain.rs  chain_bench.rs  grpc_server.rs  keys.rs  lib.rs  session.rs  signing.rs  signing_bench.rs  test_vectors.rs
crates/domain/: Cargo.toml
crates/domain/src/: canonical_event.rs  chain_builder.rs  lib.rs  model.rs  tactical_glass.rs
crates/edge/: Cargo.toml
crates/edge/src/: compute.rs  lib.rs
crates/h2-domain/: Cargo.toml
crates/h2-domain/src/: alarms.rs  h2.rs  lib.rs
crates/identity/: Cargo.toml  IDENTITY_GRPC_SERVER.md  build.rs
crates/identity/examples/: identity_grpc_server.rs
crates/identity/proto/: identity_registry.proto
crates/identity/src/: android_keystore.rs  attestation.rs  device.rs  enrollment.rs  enrollment_state.rs  error.rs  federation.rs  genesis_bundle.rs  grpc_server.rs  identity.rs  lib.rs  materia_slot.rs  pki.rs  secure_enclave.rs  tpm.rs
crates/identity/tests/: android_se_integration.rs  enrollment_integration.rs  grpc_server_integration.rs  tpm_hardware_integration.rs
crates/mesh/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md
crates/mesh/examples/: coderalphie_client.rs
crates/mesh/src/: bunker.rs  error.rs  gossip.rs  lib.rs  network.rs  peer.rs  routing.rs  security.rs  spectral.rs  tactical.rs
crates/radio/: Cargo.toml
crates/radio/src/: lib.rs  radio.rs
crates/stream/: Cargo.toml
crates/stream/src/: error.rs  integrity.rs  lib.rs  processor.rs  stream.rs
crates/tak-bridge/: Cargo.toml  README.md
crates/tak-bridge/src/: cot_adapter.rs  lib.rs  transport.rs
crates/trust_mesh/: Cargo.toml  DESKTOP_GRID_CONFIG.md  IMPLEMENTATION_SUMMARY.md
crates/trust_mesh/benches/: trust_mesh_bench.rs
crates/trust_mesh/examples/: hardening_report.rs
crates/trust_mesh/src/: audit.rs  chain.rs  gossip.rs  ledger.rs  lib.rs  merkle.rs  node_health.rs  service.rs  signing.rs  topology_bench.rs  trust.rs
crates/unit-status/: Cargo.toml  SCHEMA_VERSIONING.md
crates/unit-status/src/: feed.rs  gospel.rs  lib.rs  schema.rs  trust.rs  types.rs  websocket.rs
plugins/atak-trust-overlay/: ATAK_CIV_AUDIT_2026-03-04.md  BUILD_STATUS_REPORT.md  BUILD_SUCCESS.txt  CMakeLists.txt  CONFIGURATION.md  CRITICAL_FINDING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEVICE_ACCESS_GUIDE.md  Dockerfile.build  FINAL_DEPLOYMENT_SUMMARY.md  IMPROVEMENTS_2026-03-01.md  INSTALLATION_STATUS_REPORT.md  MISSION_COMPLETE_REAL_DEVICE.md  OPERATOR_QUICKSTART.md  PHASE_2B_AND_3_COMPLETION.md  QUICKBUILD.md  QUICKSTART.md  RALPHIENODE_INTEGRATION.md  README.md  STATUS.md  aethercore-config.json  atak_ui_dump.xml  build.gradle.kts  consumer-rules.pro  gradle.properties  gradlew  gradlew.bat  inject-cot-test.ps1  local.properties  local.properties.example  proguard-rules.pro  quick-deploy.ps1  settings.gradle.kts  system-check.ps1  verify-deployment.ps1
plugins/atak-trust-overlay/libs/: README.md
plugins/atak-trust-overlay/validation/: ATAK_CIV_MANUAL_VALIDATION_2026-03-04.md
services/h2-ingest/: Cargo.toml  Dockerfile  FLIR_INTEGRATION.md  package.json
services/h2-ingest/src/: config.rs  handlers.rs  main.rs  state.rs  video_ingest.rs
tests/integration/: .gitignore  BOUNDARY_INTEGRITY_REPORT.md  Cargo.toml  DESKTOP_TEST_HARNESS.md  README.md  build.rs
tests/integration/src/: boundary_grpc_tests.rs  boundary_replay_attack_tests.rs  boundary_trust_mesh_tests.rs  chain_of_trust_tests.rs  desktop_integration_tests.rs  lib.rs  red_cell_assault.rs  test_utils.rs
(+557 files in other folders)
