[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/crypto",
    "crates/identity",
    "crates/domain",
    "crates/mesh",
    "crates/stream",
    "crates/edge",
    "crates/isr",
    "crates/rf",
    "crates/radio",
    "crates/trust_mesh",
    "crates/h2-domain",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AetherCore Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FourMIK/AetherCore"

[workspace.dependencies]
# Common dependencies can be defined here and referenced by workspace members
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
blake3 = "1.5"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
getrandom = "0.2"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
