[package]
name = "fourmik-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Cryptographic primitives
blake3 = "1.5"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
getrandom = "0.2"
hex = "0.4"

# TODO: Add ark-groth16, ark-bn254, ark-serialize for production ZK

[dev-dependencies]
tokio = { workspace = true }
