[package]
name = "fourmik-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
hardware-tpm = []

[dependencies]
fourmik-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
