[package]
name = "fourmik-trust-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fourmik-domain = { path = "../domain" }
fourmik-crypto = { path = "../crypto" }
fourmik-core = { path = "../core" }
fourmik-mesh = { path = "../mesh" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Cryptographic primitives
blake3 = "1.5"
ed25519-dalek = "2.1"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
