[package]
name = "aethercore-android-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "aethercore_jni"
crate-type = ["cdylib"]

[dependencies]
# Workspace dependencies
aethercore-core = { path = "../core" }
aethercore-crypto = { path = "../crypto" }
aethercore-identity = { path = "../identity" }
aethercore-stream = { path = "../stream" }
aethercore-trust-mesh = { path = "../trust_mesh" }

# JNI bridge
jni = "0.21"

# Async runtime (for daemon)
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

