[package]
name = "aethercore-c2-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aethercore-core = { path = "../core" }
aethercore-identity = { path = "../identity" }
aethercore-trust-mesh = { path = "../trust_mesh" }
aethercore-stream = { path = "../stream" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
hex = { workspace = true }
base64 = "0.21"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio = { workspace = true }
proptest = "1.4"
rand = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "c2_router_bench"
harness = false
