[package]
name = "aethercore-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aethercore-core = { path = "../core" }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
