[package]
name = "aethercore-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
grpc-server = ["tonic", "tonic-build", "prost", "tokio"]

[dependencies]
aethercore-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
# gRPC dependencies (optional)
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.10", optional = true }
