[package]
name = "aethercore-h2-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "H2OS domain integration - may reference legacy"

[dependencies]
aethercore-core = { path = "../core" }
aethercore-crypto = { path = "../crypto" }
aethercore-domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
blake3 = "1.5"
ed25519-dalek = "2.1"

# Note: This crate is allowed to reference /legacy according to monorepo rules
