[package]
name = "aethercore-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
hardware-tpm = []
grpc-server = ["tonic", "tonic-build", "prost"]

[dependencies]
aethercore-core = { path = "../core" }
aethercore-crypto = { path = "../crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
# gRPC dependencies
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = { version = "0.10", optional = true }
