[package]
name = "aethercore-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
hardware-tpm = ["tss-esapi"]
grpc-server = ["tonic", "tonic-build", "prost"]

[dependencies]
aethercore-core = { path = "../core" }
aethercore-crypto = { path = "../crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
# gRPC dependencies
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
tss-esapi = { version = "7.0", optional = true }
# Crypto primitives for TPM signature verification
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.10", optional = true }
