[package]
name = "aethercore-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
hardware-tpm = ["tss-esapi"]
hardware-tpm-tests = ["hardware-tpm"]
grpc-server = ["tonic", "tonic-build", "prost"]

[dependencies]
aethercore-core = { path = "../core" }
aethercore-crypto = { path = "../crypto" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
# Security Critical: Verification Primitives
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
signature = "2.1"
hex = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
# Hardware Binding
tss-esapi = { version = "7.2.0", optional = true }
# gRPC
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.10", optional = true }
