[package]
name = "aethercore-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aethercore-core = { path = "../core" }
aethercore-crypto = { path = "../crypto" }
aethercore-identity = { path = "../identity" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rusqlite = { workspace = true }
rand = { workspace = true }
