[package]
name = "aethercore-unit-status"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aethercore-core = { path = "../core" }
aethercore-identity = { path = "../identity" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
