[package]
name = "aethercore-unit-status"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aethercore-core = { path = "../core" }
aethercore-identity = { path = "../identity" }
aethercore-trust-mesh = { path = "../trust_mesh" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }
